fix spacing of brackets

--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -3,7 +3,7 @@
     transform: translateX(0);
   }
   100% {
-    transform: translateX(-5rem);
+    transform: translateX(-7rem);
   }
 }
 
@@ -12,7 +12,7 @@
     transform: translateX(0);
   }
   100% {
-    transform: translate(5rem);
+    transform: translate(7rem);
   }
 }
 
